Implement getting Blob by Id Move Owner to Blob relation Fix documentation
